--- a/package.json
+++ b/package.json
@@ -9,17 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.6.0",
+    "csv-parse": "^5.5.2",
+    "csv-stringify": "^6.4.4",
+    "moment": "^2.29.4",
+    "next": "14.0.1",
+    "opn": "^6.0.0",
+    "phosphor-react": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.1"
+    "stream-transform": "^3.2.10"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
